# Dicom_project

./: README.md
Dicom/: CMakeLists.txt  Dicom.c
PyPros/: Dicom.c  a.out  ai.py  data.json  dc.c  dicom.c  dicom.py  dicom_error.c  gen.py  output.dcm  result.dcm  soup.py  t2.py  test.dcm  test.py
